syntax = "proto3";

// declare the usermanagerb package 
package usermanager;

option go_package = "github.com/FadyGamilM/usermanagement;usermanagement";



service UserManager {
    // unary service method     
    rpc CreateUser (NewUser) returns (User);   
    
    rpc GetUsers (GetUsersParams) returns (Users);
}


message UserDetails {
    string username = 1;
    int32 age = 2;
}


// ======== for CreateUser service 
message NewUser {
    UserDetails userInfo = 1;
}

message User {
    UserDetails userInfo = 1;
    // user id from db
    int64 userId = 2;
}

// ======== for GetUsers service 
message GetUsersParams {}

message Users {
    // a list of type User -> {id, username, age}
    repeated User usersList = 1;
}